// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ArrowIcon should render 1`] = `
<div>
  <svg
    class=" h-12 w-12 stroke-gray-light"
    fill="none"
    stroke="currentColor"
    stroke-width="1.5"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M8.25 4.5l7.5 7.5-7.5 7.5"
      stroke-linecap="round"
      stroke-linejoin="round"
    />
  </svg>
</div>
`;

exports[`ArrowIcon should render with direction down 1`] = `
<div>
  <svg
    class="rotate-90 h-12 w-12 stroke-gray-light"
    fill="none"
    stroke="currentColor"
    stroke-width="1.5"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M8.25 4.5l7.5 7.5-7.5 7.5"
      stroke-linecap="round"
      stroke-linejoin="round"
    />
  </svg>
</div>
`;

exports[`ArrowIcon should render with direction right 1`] = `
<div>
  <svg
    class="rotate-180 h-12 w-12 stroke-gray-light"
    fill="none"
    stroke="currentColor"
    stroke-width="1.5"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M8.25 4.5l7.5 7.5-7.5 7.5"
      stroke-linecap="round"
      stroke-linejoin="round"
    />
  </svg>
</div>
`;
